@@ -218,11 +218,11 @@ follow these instructions:
 
 </pre>
   <li>Download a NetBSD CD-ROM iso image:<pre>
-	<a href="ftp://ftp.netbsd.org/pub/NetBSD/iso/6.1.4/NetBSD-6.1.4-pmax.iso">ftp://ftp.netbsd.org/pub/NetBSD/iso/6.1.4/NetBSD-6.1.4-pmax.iso</a>
+	<a href="ftp://ftp.netbsd.org/pub/NetBSD/iso/7.1.1/NetBSD-7.1.1-pmax.iso">ftp://ftp.netbsd.org/pub/NetBSD/iso/7.1.1/NetBSD-7.1.1-pmax.iso</a>
 
 </pre>
   <li>Start the emulator like this:<pre>
-	<b>gxemul -X -e 3max -d nbsd_pmax.img -d b:NetBSD-6.1.4-pmax.iso</b>
+	<b>gxemul -X -e 3max -d nbsd_pmax.img -d b:NetBSD-7.1.1-pmax.iso</b>
 </pre>
 </ol>
 
@@ -243,7 +243,7 @@ and log in as <tt>root</tt>. Type <tt>startx</tt> to start X windows.
 
 <p>Remove <b><tt>-X</tt></b> if you only want a serial console.
 
-<p>(It seems that NetBSD 6.1.4 needs the user to enter root disk
+<p>(It seems that modern releases of NetBSD needs the user to enter root disk
 name (<tt>sd0</tt>) when booting. I don't think that was necessary when
 booting earlier NetBSD versions in the emulator,
 so there has been some regression here.)
