@@ -4637,3 +4637,4 @@ Changelog for GXemul:
 20180207	Adding a semi-broken framebuffer for LUNA 88K.
 20180208	Making the code build with reasonably modern GNU C++ (6.4)
 		and clang (3.4.1), although there are lots of warnings.
+		Updating NetBSD/pmax install instructions: 6.1.4 -> 7.1.1.
